--- a/src/main/resources/view/forgetPassword2_form.fxml
+++ b/src/main/resources/view/forgetPassword2_form.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="301.0" prefWidth="481.0" style="-fx-background-color: #f87171;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ForgetPassword2FormController">
+<AnchorPane prefHeight="301.0" prefWidth="481.0" style="-fx-background-color: #0c0c31#0c0c31;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ForgetPassword2FormController">
    <children>
-      <Label layoutX="202.0" layoutY="14.0" prefHeight="36.0" prefWidth="78.0" text="OTP">
+      <Label layoutX="202.0" layoutY="14.0" prefHeight="36.0" prefWidth="78.0" text="OTP" textFill="#f5e8e8">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
