--- a/src/main/resources/view/login_form.fxml
+++ b/src/main/resources/view/login_form.fxml
@@ -11,11 +11,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginFormController">
+<AnchorPane fx:id="rootnode" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginFormController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-      <AnchorPane prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #1d7281;" />
+      <AnchorPane prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #0c0c31;" />
       <TextField fx:id="txtUserId" layoutX="337.0" layoutY="159.0" prefHeight="34.0" prefWidth="250.0" promptText="type here" />
       <TextField fx:id="txtPassword" layoutX="337.0" layoutY="206.0" prefHeight="34.0" prefWidth="250.0" promptText="type here" />
       <Text layoutX="267.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User ID">
@@ -28,7 +27,7 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="370.0" layoutY="285.0" onAction="#btnLoginOnAction" prefHeight="29.0" prefWidth="119.0" ripplerFill="BLACK" style="-fx-background-color: #1ca8b5;" text="Login">
+      <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="370.0" layoutY="290.0" onAction="#btnLoginOnAction" prefHeight="29.0" prefWidth="119.0" ripplerFill="BLACK" style="-fx-background-color: #1ca8b5;" text="Login">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -46,12 +45,17 @@
             <Font name="System Bold" size="27.0" />
          </font>
       </Label>
-      <Hyperlink fx:id="linkForgetPassword" layoutX="337.0" layoutY="242.0" onAction="#linkForgetPasswordOnAction" text="forget your password ?" />
-      <Text layoutX="354.0" layoutY="358.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Do you haven't account ?" wrappingWidth="200.0">
+      <Text layoutX="334.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Did you forget the password ?" wrappingWidth="218.0">
          <font>
             <Font name="FreeSerif" size="18.0" />
          </font>
       </Text>
-      <Hyperlink fx:id="linkNewAccount" layoutX="363.0" layoutY="359.0" onAction="#linkNewAccountOnAction" text="Create new account" />
+      <Hyperlink fx:id="linkForgetPassword" layoutX="363.0" layoutY="359.0" onAction="#linkForgetPasswordOnAction" prefHeight="22.0" prefWidth="150.0" text="Forgotten Password" />
+      <TextField fx:id="emailField" layoutX="336.0" layoutY="251.0" prefHeight="34.0" prefWidth="250.0" promptText="type here" />
+      <Text layoutX="266.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="email">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
