--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.controller.CustomerFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane fx:id="custAnchorpane" prefHeight="780.0" prefWidth="985.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.CustomerFormController">
+   <children>
+      <TextField fx:id="txtCusId" layoutX="166.0" layoutY="125.0" promptText="type here" />
+      <TextField fx:id="txtTel" layoutX="633.0" layoutY="249.0" promptText="type here" />
+      <TextField fx:id="txtAddress" layoutX="166.0" layoutY="237.0" promptText="type here" />
+      <TextField fx:id="txtName" layoutX="633.0" layoutY="125.0" promptText="type here" />
+      <Text layoutX="166.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CUS ID" />
+      <Text layoutX="639.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+      <Text layoutX="169.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
+      <Text layoutX="639.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" />
+      <Label layoutX="354.0" layoutY="20.0" text="Customer Form">
+         <font>
+            <Font name="System Bold" size="32.0" />
+         </font>
+      </Label>
+      <JFXButton fx:id="btnSave" layoutX="742.0" layoutY="328.0" onAction="#btnSaveOnAction" text="Save" />
+      <JFXButton fx:id="btnDelete" layoutX="672.0" layoutY="328.0" onAction="#btnDeleteOnAction" text="Delete" />
+      <JFXButton fx:id="btnUpdate" layoutX="599.0" layoutY="329.0" onAction="#btnUpdateOnAction" text="Update" />
+   </children>
 </AnchorPane>
