--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -2,29 +2,106 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:id="custAnchorpane" prefHeight="780.0" prefWidth="985.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.CustomerFormController">
+<AnchorPane fx:id="custAnchorpane" prefHeight="790.0" prefWidth="1008.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.CustomerFormController">
    <children>
-      <TextField fx:id="txtCusId" layoutX="166.0" layoutY="125.0" promptText="type here" />
-      <TextField fx:id="txtTel" layoutX="633.0" layoutY="249.0" promptText="type here" />
-      <TextField fx:id="txtAddress" layoutX="166.0" layoutY="237.0" promptText="type here" />
-      <TextField fx:id="txtName" layoutX="633.0" layoutY="125.0" promptText="type here" />
-      <Text layoutX="166.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CUS ID" />
-      <Text layoutX="639.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-      <Text layoutX="169.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
-      <Text layoutX="639.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" />
+      <Text layoutX="110.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CUS ID" wrappingWidth="61.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Text>
+      <Text layoutX="639.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Text>
+      <Text layoutX="114.0" layoutY="224.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Text>
+      <Text layoutX="639.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Text>
       <Label layoutX="354.0" layoutY="20.0" text="Customer Form">
          <font>
             <Font name="System Bold" size="32.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnSave" layoutX="742.0" layoutY="328.0" onAction="#btnSaveOnAction" text="Save" />
-      <JFXButton fx:id="btnDelete" layoutX="672.0" layoutY="328.0" onAction="#btnDeleteOnAction" text="Delete" />
-      <JFXButton fx:id="btnUpdate" layoutX="599.0" layoutY="329.0" onAction="#btnUpdateOnAction" text="Update" />
+      <JFXButton fx:id="btnSave" layoutX="777.0" layoutY="319.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="16.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-plus-96.png" />
+               </image>
+            </ImageView>
+         </graphic></JFXButton>
+      <JFXButton fx:id="btnDelete" layoutX="662.0" layoutY="319.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-delete-64.png" />
+               </image>
+            </ImageView>
+         </graphic></JFXButton>
+      <JFXButton fx:id="btnUpdate" layoutX="547.0" layoutY="319.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="16.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-update-96.png" />
+               </image>
+            </ImageView>
+         </graphic></JFXButton>
+      <JFXButton fx:id="btnClear" layoutX="431.0" layoutY="319.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5;" text="Clear">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-clear-90.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <TableView layoutX="97.0" layoutY="396.0" prefHeight="286.0" prefWidth="811.0">
+        <columns>
+          <TableColumn fx:id="colId" prefWidth="123.0" text="CUS ID" />
+          <TableColumn fx:id="colName" prefWidth="220.0" text="Name" />
+            <TableColumn fx:id="colAddress" prefWidth="234.0" text="Address" />
+            <TableColumn fx:id="colTel" prefWidth="233.0" text="Tel" />
+        </columns>
+      </TableView>
+      <JFXButton fx:id="btnBack" layoutX="66.0" layoutY="720.0" onAction="#btnBackOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #64dd17;" text="Back">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-back-96.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <TextField fx:id="txtCusId" layoutX="110.0" layoutY="133.0" prefHeight="40.0" prefWidth="241.0" />
+      <TextField fx:id="txtName" layoutX="632.0" layoutY="124.0" prefHeight="40.0" prefWidth="241.0" />
+      <TextField fx:id="txtAddress" layoutX="110.0" layoutY="236.0" prefHeight="40.0" prefWidth="241.0" />
+      <TextField fx:id="txtTel" layoutX="632.0" layoutY="244.0" prefHeight="40.0" prefWidth="241.0" />
    </children>
 </AnchorPane>
