--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -1,14 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.controller.EmployeeFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="790.0" prefWidth="1008.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.EmployeeFormController">
+   <children>
+      <Label layoutX="422.0" layoutY="26.0" text="Employee">
+         <font>
+            <Font name="System Bold" size="30.0" />
+         </font>
+      </Label>
+      <Text layoutX="104.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EMP ID" wrappingWidth="55.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtEmpId" layoutX="104.0" layoutY="154.0" onAction="#txtSearchOnAction" prefHeight="28.0" prefWidth="211.0" />
+      <Text layoutX="415.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="88.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtFirstName" layoutX="415.0" layoutY="154.0" prefHeight="28.0" prefWidth="211.0" />
+      <Text layoutX="718.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="88.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtLastName" layoutX="718.0" layoutY="154.0" prefHeight="28.0" prefWidth="211.0" />
+      <Text layoutX="104.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="88.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtAddress" layoutX="104.0" layoutY="241.0" prefHeight="28.0" prefWidth="211.0" />
+      <Text layoutX="415.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" wrappingWidth="88.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtTel" layoutX="415.0" layoutY="241.0" prefHeight="28.0" prefWidth="211.0" />
+      <Text layoutX="718.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salary" wrappingWidth="88.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtSalary" layoutX="718.0" layoutY="241.0" prefHeight="28.0" prefWidth="211.0" />
+      <Text layoutX="415.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position" wrappingWidth="88.7294921875">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtPosition" layoutX="415.0" layoutY="323.0" prefHeight="28.0" prefWidth="211.0" />
+      <JFXButton buttonType="RAISED" layoutX="867.0" layoutY="371.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+         <graphic>
+            <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-plus-96.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="758.0" layoutY="371.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+         <graphic>
+            <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-delete-64.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="649.0" layoutY="371.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+         <graphic>
+            <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-update-96.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="539.0" layoutY="371.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Clear">
+         <graphic>
+            <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-clear-90.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <TableView fx:id="tblEmployee" layoutX="58.0" layoutY="469.0" prefHeight="225.0" prefWidth="909.0">
+        <columns>
+          <TableColumn fx:id="colEmpId" prefWidth="86.0" text="EMP ID" />
+          <TableColumn fx:id="colFirstName" prefWidth="151.0" text="First Name" />
+            <TableColumn fx:id="colAddress" prefWidth="146.0" text="Address" />
+            <TableColumn fx:id="colTel" prefWidth="171.0" text="Tel" />
+            <TableColumn fx:id="colSalary" prefWidth="174.0" text="Salary" />
+            <TableColumn fx:id="colPosition" prefWidth="180.0" text="Position" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
